--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ build_script:
   rake "create_setup[%APPVEYOR_BUILD_VERSION%]"
 
 artifacts:
-  - path: '**/output/*.exe'  
+  - path: '**/output/OSPSuite*.exe'  
   - path: '**/output/versions.txt'  
     name: 'versions'
 
