--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ install:
       Copy-Item c:\netfx452.exe .
 
   - ps: >-
-      (new-object net.webclient).DownloadFile('https://download.microsoft.com/download/9/3/F/93FCF1E7-E6A4-478B-96E7-D4B285925B00/vc_redist.x86.exe', 'C:\\vc_redist.x86.exe')
+      (new-object net.webclient).DownloadFile('http://go.microsoft.com/fwlink/?LinkID=615459&clcid=0x409', 'C:\\vc_redist.x86.exe')
 
       Copy-Item C:\vc_redist.x86.exe .
 
