--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ install:
 
       Copy-Item C:\MikTex.msi .
 
-build_script: rake "create_setup[%APPVEYOR_BUILD_VERSION%, hotfix/v9.1]"
+build_script: rake "create_setup[%APPVEYOR_BUILD_VERSION%]"
 
 artifacts:
   - path: "**/output/OSPSuite*.exe"
